@@ -138,10 +138,10 @@ bivHetModel <- mxModel("bivariate Heterogeneity Path Specification",
 )
 
     bivHetFit <- mxRun(bivHetModel)
-    EM1Het <- bivHetFit$group1.objective@expMean
-    EM2Het <- bivHetFit$group2.objective@expMean
-    EC1Het <- bivHetFit$group1.objective@expCov
-    EC2Het <- bivHetFit$group2.objective@expCov
+    EM1Het <- bivHetFit$group1.objective@info$expMean
+    EM2Het <- bivHetFit$group2.objective@info$expMean
+    EC1Het <- bivHetFit$group1.objective@info$expCov
+    EC2Het <- bivHetFit$group2.objective@info$expCov
     LLHet <- mxEval(objective, bivHetFit)
 # Fit Heterogeneity Model
 # -----------------------------------------------------------------------------
@@ -151,10 +151,10 @@ bivHomModel <- bivHetModel
     bivHomModel[['group2.M']]@labels <- bivHomModel[['group1.M']]@labels
 
     bivHomFit <- mxRun(bivHomModel)
-    EM1Hom <- bivHomFit$group1.objective@expMean
-    EM2Hom <- bivHomFit$group2.objective@expMean
-    EC1Hom <- bivHomFit$group1.objective@expCov
-    EC2Hom <- bivHomFit$group2.objective@expCov
+    EM1Hom <- bivHomFit$group1.objective@info$expMean
+    EM2Hom <- bivHomFit$group2.objective@info$expMean
+    EC1Hom <- bivHomFit$group1.objective@info$expCov
+    EC2Hom <- bivHomFit$group2.objective@info$expCov
     LLHom <- mxEval(objective, bivHomFit)
 
     Chi= LLHom-LLHet
