@@ -62,9 +62,9 @@ twinACEModel <- mxModel("twinACE", MZ, DZ,
 twinACEFit <- mxRun(twinACEModel)
 summary(twinACEFit)
 
-MZc <- twinACEFit$MZ.objective@expCov
-DZc <- twinACEFit$DZ.objective@expCov
-M   <- twinACEFit$MZ.objective@expMean
+MZc <- twinACEFit$MZ.objective@info$expCov
+DZc <- twinACEFit$DZ.objective@info$expCov
+M   <- twinACEFit$MZ.objective@info$expMean
 A   <- mxEval(a*a, twinACEFit)
 C   <- mxEval(c*c, twinACEFit)
 E   <- mxEval(e*e, twinACEFit)
@@ -114,9 +114,9 @@ model <- mxModel("twinAE", MZ, DZ,
 fit <- mxRun(model)
 summary(fit)
 
-MZc <- fit$MZ.objective@expCov
-DZc <- fit$DZ.objective@expCov
-M   <- fit$MZ.objective@expMean
+MZc <- fit$MZ.objective@info$expCov
+DZc <- fit$DZ.objective@info$expCov
+M   <- fit$MZ.objective@info$expMean
 A   <- mxEval(a*a, fit)
 C   <- mxEval(c*c, fit)
 E   <- mxEval(e*e, fit)
